# echo_bridge

AiDeDsMl/ai_ds_team_dancho/: .flake8  .gitignore  .pre-commit-config.yaml  API_REFERENCE.md  ARCHITECTURE_GUIDE.md  BEST_PRACTICES.md  GETTING_STARTED.md  MIGRATION_GUIDE.md  mypy.ini  pyproject.toml  requirements.txt
AiDeDsMl/ai_ds_team_dancho/ai_data_science_team/agents/: base_agent_modern.py  data_cleaning_agent.py  data_cleaning_agent_modern.py  data_visualization_agent_modern.py  data_wrangling_agent_modern.py  feature_engineering_agent_modern.py
AiDeDsMl/ai_ds_team_dancho/ai_data_science_team/multiagents/: pandas_data_analyst.py
AiDeDsMl/ai_ds_team_dancho/ai_data_science_team/templates/: agent_templates.py
AiDeDsMl/ai_ds_team_dancho/ai_data_science_team/tools/: __init__.py  polars_tools.py
AiDeDsMl/ai_ds_team_dancho/ai_data_science_team/utils/: __init__.py  dataframe_compat.py  duckdb_manager.py  marimo_generator.py
AiDeDsMl/ai_ds_team_dancho/tests/agents/: test_base_agent_modern.py  test_data_cleaning_agent.py  test_data_cleaning_agent_modern.py  test_data_visualization_agent_modern.py  test_data_wrangling_agent_modern.py  test_feature_engineering_agent_modern.py
AiDeDsMl/ai_ds_team_dancho/tests/tools/: test_polars_tools.py
AiDeDsMl/ai_ds_team_dancho/tests/utils/: test_dataframe_compat.py  test_duckdb_manager.py  test_marimo_generator.py
echo_bridge/VirtualKeyboardApp/: AGENTS.md  DEVICE_TESTING_GUIDE.md  DOCUMENTATION_INDEX.md  FINGERTIP_DETECTOR_IMPLEMENTATION.md  HAND_DETECTOR_IMPLEMENTATION.md  HAND_DETECTOR_RESULTS.md  PHASE1_BUILD_STATUS.md  PHASE1_COMPLETE.md  PHASE1_FINAL_REPORT.md  PHASE2_COMPLETION_STATUS.md  PHASE2_IMPLEMENTATION_PLAN.md  PHASE3_DELIVERY_SUMMARY.md  PHASE3_OVERVIEW.md  PHASE3_QUICKSTART.md  PHASE3_READY_TO_START.md  PHASE3_TESTING_PLAN.md  PHASE3_XCODE_SETUP_GUIDE.md  PROJECT_STATUS_SUMMARY.md  Package.swift  QUICK_START_REFERENCE.md  README.md  README_PHASE3_START_HERE.txt  SETUP_COMPLETE.md  SWIFT6_REFACTORING_COMPLETE.md  TOUCHVALIDATOR_IMPLEMENTATION.md  TOUCHVALIDATOR_STATE_MACHINE.txt  VISION_COMPLETE_STATUS.md  VISION_PROGRESS.md
echo_bridge/VirtualKeyboardApp/.build/: build.db  debug.yaml  release.yaml
echo_bridge/VirtualKeyboardApp/.build/arm64-apple-macosx/debug/: description.json
echo_bridge/VirtualKeyboardApp/.build/arm64-apple-macosx/debug/ModuleCache/: Accelerate-11GJYGEJ45H4I.swiftmodule  Accessibility-1GQ9YVY6OLABB.swiftmodule  AppKit-7MBS9LFDVYCU.swiftmodule  Combine-31TEKA1UXPT8L.swiftmodule  CoreAudio-2RNRQRB5MXVTA.swiftmodule  CoreData-NHWPI3N49YCR.swiftmodule  CoreFoundation-2769X1D7HQIUB.swiftmodule  CoreImage-1NN7811ZLZDRF.swiftmodule  CoreMIDI-EQLVYU1VKMIF.swiftmodule  CoreMedia-BAKKYBTPZ994.swiftmodule  CoreTransferable-2OHBAKHY4BVJY.swiftmodule  Darwin-3I5EQWLQ71Q3S.swiftmodule  DeveloperToolsSupport-1Z9H137BUUMVP.swiftmodule  Dispatch-3MMHQTHPMLQP5.swiftmodule  Metal-3EB9LY8265AS2.swiftmodule  OSLog-3TODZL6CZBY8O.swiftmodule  QuartzCore-3TOQKP9MYXXI6.swiftmodule  Spatial-2Z4OL41RYM64E.swiftmodule  SwiftOnoneSupport-CGGP9UM8BT0X.swiftmodule  SwiftUI-2EATAVV7U2RGS.swiftmodule  (+13 more)
echo_bridge/VirtualKeyboardApp/.build/arm64-apple-macosx/release/: description.json  swift-version--1AB21518FC5DEDBE.txt
echo_bridge/VirtualKeyboardApp/.claude/: claude.md
echo_bridge/VirtualKeyboardApp/.claude/agents/: integration-testing-instructions.md  ios-expert-instructions.md  vision-specialist-instructions.md
echo_bridge/VirtualKeyboardApp/.claude/commands/: benchmark.md  build-test.md  summon-vision.md
echo_bridge/VirtualKeyboardApp/.claude/mcp/: xcode-integration.md
echo_bridge/VirtualKeyboardApp/.claude/skills/: apple-intelligence-integration.md  ios-keyboard-layout.md  virtual-keyboard-vision.md
echo_bridge/VirtualKeyboardApp/Sources/Models/: HandData.swift  KeyboardKey.swift  TouchEvent.swift
echo_bridge/VirtualKeyboardApp/Sources/Vision/: FingertipDetector.swift  HandDetector.swift  ShadowAnalyzer.swift  TouchValidator.swift
echo_bridge/VirtualKeyboardApp/Tests/: AccuracyBenchmarkTests.swift  FingertipDetectorTests.swift  ShadowAnalyzerTests.swift  TouchValidatorTests.swift
(+790 files in other folders)
