[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-data-science-team"
version = "0.2.0"
description = "Modern Python data science agent framework with uv, polars, duckdb, dlt, marimo"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "AI Data Science Team", email = "team@example.com"}
]

# Core dependencies
dependencies = [
    # LLM & Agents
    "langchain==0.3.12",
    "langchain-openai==0.2.14",
    "langchain_community==0.3.12",
    "langchain_experimental==0.3.3",
    "langgraph==0.2.74",
    "openai==1.58.1",

    # Modern Data Stack
    "polars>=0.20.0",           # Memory-efficient DataFrames with lazy evaluation
    "duckdb>=1.0.0",            # Embedded OLAP database for analysis
    "dlt>=0.4.0",               # Declarative ETL for data pipelines
    "altair>=5.0.0",            # Declarative visualization (Vega-Lite)
    "marimo>=0.8.0",            # Reactive Python notebooks

    # Data & utilities
    "pandas==2.2.3",            # Legacy support during migration
    "numpy==1.26.4",
    "sqlalchemy==2.0.36",
    "openpyxl==3.1.5",

    # ML & Analytics
    "scikit-learn==1.5.2",
    "xgboost==2.1.3",

    # Configuration & Validation
    "pydantic>=2.0.0",
    "pydantic-settings==2.3.1",
    "python-dotenv>=1.0.0",

    # UI & Visualization
    "plotly==5.24.1",           # Legacy support during migration
    "streamlit==1.40.2",

    # System utilities
    "psutil==6.1.1",
]

# Optional development dependencies
[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "ruff>=0.1.0",
]

# Optional visualization extras
viz = [
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
]

# Optional compatibility packages
compat = [
    "pyarrow>=12.0.0",          # For pandas/polars conversion
    "openpyxl>=3.1.0",
]

[project.scripts]
ai-data-science-team = "ai_data_science_team.cli:main"

[tool.uv]
# Development dependencies for uv sync
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "ruff>=0.1.0",
]

[tool.ruff]
# Target Python version
target-version = "py39"
line-length = 100

# Linting rules
[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "RUF",    # ruff-specific rules
    "TCH",    # flake8-type-checking
]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "W503",   # Line break before binary operator
    "B008",   # Function call in default argument
]

# Import sorting (isort replacement)
[tool.ruff.lint.isort]
known-first-party = ["ai_data_science_team"]
known-third-party = [
    "langchain",
    "langgraph",
    "openai",
    "polars",
    "duckdb",
    "dlt",
    "altair",
    "marimo",
    "pandas",
    "numpy",
    "sklearn",
    "xgboost",
    "sqlalchemy",
]
force-single-line = false
combine-as-imports = true

# Per-file ignores
[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401", "F403"]  # Ignore unused imports in __init__
"tests/*" = ["F401", "F811"]       # Ignore unused imports/redefinitions in tests

# Formatter settings
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["ai_data_science_team"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if 0:",
]
precision = 2
